--- a/prototyping/index.html
+++ b/prototyping/index.html
@@ -26,6 +26,24 @@
         padding: 5px;
       }
 
+      div.sidebar p {
+        margin: 5px;
+      }
+
+      div.sidebar ul {
+        list-style-type: none;
+        margin: 15px 2px 15px 4px;
+        padding: 0px;
+      }
+
+      div.sidebar ul li {
+        margin: 2px;
+      }
+
+      div.sidebar ul li a {
+        color: #000;
+      }
+
       div.mainpage {
         border: dotted 1px #000;
         width: 100%;
@@ -35,7 +53,32 @@
         width: 100%;
         text-align: center;
         font-size: 26pt;
-        text-decoration: bold;
+      }
+
+      div#title h2 {
+        margin: 2px;
+      }
+
+      div#screenshots {
+        display: block;
+        text-align: center;
+
+        height: 136px;
+        width: 100%;
+        margin: 2px;
+      }
+
+      div#screenshots img {
+        display: block;
+
+        max-width: 128px;
+        max-height: 128px;
+
+        margin: 12px;
+        float: left;
+
+        border: solid 1px #aaa;
+        box-shadow: 2px 2px 5px #888;
       }
 
       div#content {
@@ -55,7 +98,7 @@
       p#copyleft {
         position: absolute;
         left: -22px;
-        bottom: -12px;
+        bottom: -2px;
         font-size: 12pt;
 
       }
@@ -64,24 +107,25 @@
   <body>
     <div id="container">
       <div class="mainpage">
-        <div id="title">TITLE</div>
+        <div id="title"><h2>TITLE</h2></div>
+        <div id="screenshots"><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/></div>
         <div id="content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum...
         </div>
       </div>
 
     	<div class="sidebar">
+        <div id="title">Sidebar</div>
+
+        <p>Projekt:</p>
+        <ul>
+          <li><a href="#">Don't click me</a></li>
+          <li><a href="#">Don't click me</a></li>
+          <li><a href="#">Don't click me</a></li>
+          <li><a href="#">Don't click me</a></li>
+          <li><a href="#">Don't click me</a></li>
+          <li><a href="#">Don't click me</a></li>
+        </ul>
     		<span id="copyleft"><p id="copyleft">&copy;</p>Alexander "Ace" Olofsson<br/>Albin Ekberg</span>
     	</div>
   	</div>
