Getting the prototyping out into templates, still a way to go

--- a/prototyping/index.html
+++ b/prototyping/index.html
@@ -83,8 +83,6 @@
 
       div#content {
         margin: 5px;
-
-
       }
 
       span#copyleft {
@@ -100,7 +98,6 @@
         left: -22px;
         bottom: -2px;
         font-size: 12pt;
-
       }
     </style>
   </head>
@@ -110,7 +107,12 @@
         <div id="title"><h2>TITLE</h2></div>
         <div id="screenshots"><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/><img src="http://2.bp.blogspot.com/-wh4-T9I4qhg/TVro5ldzoEI/AAAAAAAAAGs/rejHtH1xxAQ/s1600/banan.jpg" alt="Image"/></div>
         <div id="content">
-          Lorem ipsum...
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
       </div>
 
@@ -119,7 +121,7 @@
 
         <p>Projekt:</p>
         <ul>
-          <li><a href="#">Don't click me</a></li>
+          <li><a href="#">Don't click me, asshole</a></li>
           <li><a href="#">Don't click me</a></li>
           <li><a href="#">Don't click me</a></li>
           <li><a href="#">Don't click me</a></li>
