Mer arbete med prototyper och en simpel projektlista

--- a/prototyping/index.html
+++ b/prototyping/index.html
@@ -15,7 +15,7 @@
   </head>
   <body onload="onLoad();">
     <div id="curPage">
-      <p>[ <a href=".">home</a> ]</p>
+      <p>[ <a href="index.html">home</a> ]</p>
     </div>
     <div id="container">
       <div class="mainpage">
