--- a/prototyping/search.html
+++ b/prototyping/search.html
@@ -65,6 +65,21 @@
             </table>
           </div>
         </form>
+        <hr/>
+        <div id="results" style="margin-top:2em;text-align:left;">
+          <table>
+            <tr><td></td>
+              <th>Projektnamn</th>
+              <th>Startdatum</th>
+              <th>Slutdatum</th>
+            </tr>
+            <tr>
+              <td><img class="project" src="small_project.png"/></td>
+              <td>python-module-test-fields</td>
+              <td>2009-07-08</td>
+              <td>2009-08-07</td>
+            </tr>
+        </div>
       </div>
 
     	<div class="sidebar">
